--- a/spec/fixtures/notion/paginated_database_query.yml
+++ b/spec/fixtures/notion/paginated_database_query.yml
@@ -1,136 +1,152 @@
 ---
 http_interactions:
-  - request:
-      method: post
-      uri: https://api.notion.com/v1/databases/89b30a70-ce51-4646-ab4f-5fdcb1d5e76c/query
-      body:
-        encoding: UTF-8
-        string: '{"id":"89b30a70-ce51-4646-ab4f-5fdcb1d5e76c","page_size":1}'
-      headers:
-        Accept:
-          - application/json; charset=utf-8
-        User-Agent:
-          - Notion Ruby Client/0.0.4
-        Authorization:
-          - Bearer <NOTION_API_TOKEN>
-        Content-Type:
-          - application/json
-        Accept-Encoding:
-          - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-    response:
-      status:
-        code: 200
-        message: OK
-      headers:
-        Date:
-          - Sun, 25 Apr 2021 21:00:00 GMT
-        Content-Type:
-          - application/json; charset=utf-8
-        Transfer-Encoding:
-          - chunked
-        Connection:
-          - keep-alive
-        Set-Cookie:
-          - __cfduid=d2a4deba9394e6bd598acff673b4dc26a1619384399; expires=Tue, 25-May-21
-            20:59:59 GMT; path=/; domain=.notion.com; HttpOnly; SameSite=Lax
-          - notion_browser_id=8c6f9137-4edd-445e-8fa5-5377f08b641f; Domain=www.notion.so;
-            Path=/; Expires=Wed, 01 Jan 2053 22:46:40 GMT; Secure
-        X-Dns-Prefetch-Control:
-          - "off"
-        X-Frame-Options:
-          - SAMEORIGIN
-        Strict-Transport-Security:
-          - max-age=5184000; includeSubDomains
-        X-Download-Options:
-          - noopen
-        X-Content-Type-Options:
-          - nosniff
-        X-Xss-Protection:
-          - 1; mode=block
-        Referrer-Policy:
-          - same-origin
-        Content-Security-Policy:
-          - "script-src 'self' 'unsafe-inline' 'unsafe-eval' https://gist.github.com
-            https://apis.google.com https://api.amplitude.com https://widget.intercom.io
-            https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-            https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-            https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
-            https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-            connect-src 'self' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-            ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-            https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
-            https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
-            https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-            https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-            https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-            https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-            font-src 'self' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-            img-src 'self' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-            https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-            'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://github.githubassets.com
-            https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-            media-src https: http:"
-        X-Content-Security-Policy:
-          - "script-src 'self' 'unsafe-inline' 'unsafe-eval' https://gist.github.com
-            https://apis.google.com https://api.amplitude.com https://widget.intercom.io
-            https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-            https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-            https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
-            https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-            connect-src 'self' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-            ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-            https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
-            https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
-            https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-            https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-            https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-            https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-            font-src 'self' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-            img-src 'self' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-            https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-            'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://github.githubassets.com
-            https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-            media-src https: http:"
-        X-Webkit-Csp:
-          - "script-src 'self' 'unsafe-inline' 'unsafe-eval' https://gist.github.com
-            https://apis.google.com https://api.amplitude.com https://widget.intercom.io
-            https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-            https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-            https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
-            https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-            connect-src 'self' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-            ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-            https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
-            https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
-            https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-            https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-            https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-            https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-            font-src 'self' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-            img-src 'self' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-            https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-            'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://github.githubassets.com
-            https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-            media-src https: http:"
-        Etag:
-          - W/"256-GLaRmcrB0MMJquGjfaHJ2Jl5ecg"
-        Vary:
-          - Accept-Encoding
-        Cf-Cache-Status:
-          - DYNAMIC
-        Cf-Request-Id:
-          - "09ac6e0e370000084718196000000001"
-        Expect-Ct:
-          - max-age=604800, report-uri="https://report-uri.cloudflare.com/cdn-cgi/beacon/expect-ct"
-        Server:
-          - cloudflare
-        Cf-Ray:
-          - 645a7f9059c90847-CDG
-      body:
-        encoding: UTF-8
-        string:
-          '{"object":"list","results":[{"object":"page","id":"723578f1-6e51-450c-8ee1-09158c19fd4c","created_time":"2021-01-29T20:50:51.917Z","last_edited_time":"2021-04-25T20:41:00.000Z","parent":{"type":"database_id","database_id":"89b30a70-ce51-4646-ab4f-5fdcb1d5e76c"},"archived":false,"properties":{"Name":{"id":"title","type":"title","title":[{"type":"text","text":{"content":"A
-          Notion page","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
-          Notion page","href":null}]}}}],"next_cursor":null,"has_more":false}'
-    recorded_at: Sun, 25 Apr 2021 21:00:00 GMT
+- request:
+    method: post
+    uri: https://api.notion.com/v1/databases/dd428e9dd3fe4171870da7a1902c748b/query
+    body:
+      encoding: UTF-8
+      string: '{"page_size":1,"database_id":"dd428e9dd3fe4171870da7a1902c748b"}'
+    headers:
+      Accept:
+      - application/json; charset=utf-8
+      User-Agent:
+      - Notion Ruby Client/0.0.8
+      Authorization:
+      - Bearer <NOTION_API_TOKEN>
+      Notion-Version:
+      - '2021-05-13'
+      Content-Type:
+      - application/json
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Sun, 29 Aug 2021 16:47:36 GMT
+      Content-Type:
+      - application/json; charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      X-Dns-Prefetch-Control:
+      - 'off'
+      X-Frame-Options:
+      - SAMEORIGIN
+      Strict-Transport-Security:
+      - max-age=5184000; includeSubDomains
+      X-Download-Options:
+      - noopen
+      X-Content-Type-Options:
+      - nosniff
+      X-Xss-Protection:
+      - 1; mode=block
+      Referrer-Policy:
+      - same-origin
+      Content-Security-Policy:
+      - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
+        https://apis.google.com https://api.amplitude.com https://widget.intercom.io
+        https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
+        https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
+        https://public.profitwell.com js.sentry-cdn.com https://js.chilipiper.com
+        https://platform.twitter.com https://cdn.syndication.twimg.com https://www.googletagmanager.com
+        https://x.clearbitjs.com https://client-registry.mutinycdn.com https://client.mutinycdn.com/
+        https://user-data.mutinycdn.com; connect-src ''self'' https://msgstore.www.notion.so
+        wss://msgstore.www.notion.so ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com
+        https://s3-us-west-2.amazonaws.com https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+        https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
+        https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
+        https://cdn.segment.com https://api.segment.io https://analytics.pgncs.notion.so
+        https://api.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://cdn.contentful.com https://preview.contentful.com
+        https://images.ctfassets.net https://www2.profitwell.com https://tracking.chilipiper.com
+        https://api.chilipiper.com https://api.unsplash.com https://boards-api.greenhouse.io
+        https://user-data.mutinycdn.com https://api-v2.mutinyhq.io https://api.statuspage.io
+        https://pgncd.notion.so; font-src ''self'' data: https://cdnjs.cloudflare.com
+        https://js.intercomcdn.com; img-src ''self'' data: blob: https: https://platform.twitter.com
+        https://syndication.twitter.com https://pbs.twimg.com https://ton.twimg.com
+        www.googletagmanager.com; style-src ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com
+        https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
+        https://ton.twimg.com; frame-src https: http:; media-src https: http:'
+      X-Content-Security-Policy:
+      - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
+        https://apis.google.com https://api.amplitude.com https://widget.intercom.io
+        https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
+        https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
+        https://public.profitwell.com js.sentry-cdn.com https://js.chilipiper.com
+        https://platform.twitter.com https://cdn.syndication.twimg.com https://www.googletagmanager.com
+        https://x.clearbitjs.com https://client-registry.mutinycdn.com https://client.mutinycdn.com/
+        https://user-data.mutinycdn.com; connect-src ''self'' https://msgstore.www.notion.so
+        wss://msgstore.www.notion.so ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com
+        https://s3-us-west-2.amazonaws.com https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+        https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
+        https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
+        https://cdn.segment.com https://api.segment.io https://analytics.pgncs.notion.so
+        https://api.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://cdn.contentful.com https://preview.contentful.com
+        https://images.ctfassets.net https://www2.profitwell.com https://tracking.chilipiper.com
+        https://api.chilipiper.com https://api.unsplash.com https://boards-api.greenhouse.io
+        https://user-data.mutinycdn.com https://api-v2.mutinyhq.io https://api.statuspage.io
+        https://pgncd.notion.so; font-src ''self'' data: https://cdnjs.cloudflare.com
+        https://js.intercomcdn.com; img-src ''self'' data: blob: https: https://platform.twitter.com
+        https://syndication.twitter.com https://pbs.twimg.com https://ton.twimg.com
+        www.googletagmanager.com; style-src ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com
+        https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
+        https://ton.twimg.com; frame-src https: http:; media-src https: http:'
+      X-Webkit-Csp:
+      - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
+        https://apis.google.com https://api.amplitude.com https://widget.intercom.io
+        https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
+        https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
+        https://public.profitwell.com js.sentry-cdn.com https://js.chilipiper.com
+        https://platform.twitter.com https://cdn.syndication.twimg.com https://www.googletagmanager.com
+        https://x.clearbitjs.com https://client-registry.mutinycdn.com https://client.mutinycdn.com/
+        https://user-data.mutinycdn.com; connect-src ''self'' https://msgstore.www.notion.so
+        wss://msgstore.www.notion.so ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com
+        https://s3-us-west-2.amazonaws.com https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+        https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
+        https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
+        https://cdn.segment.com https://api.segment.io https://analytics.pgncs.notion.so
+        https://api.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://cdn.contentful.com https://preview.contentful.com
+        https://images.ctfassets.net https://www2.profitwell.com https://tracking.chilipiper.com
+        https://api.chilipiper.com https://api.unsplash.com https://boards-api.greenhouse.io
+        https://user-data.mutinycdn.com https://api-v2.mutinyhq.io https://api.statuspage.io
+        https://pgncd.notion.so; font-src ''self'' data: https://cdnjs.cloudflare.com
+        https://js.intercomcdn.com; img-src ''self'' data: blob: https: https://platform.twitter.com
+        https://syndication.twitter.com https://pbs.twimg.com https://ton.twimg.com
+        www.googletagmanager.com; style-src ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com
+        https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
+        https://ton.twimg.com; frame-src https: http:; media-src https: http:'
+      Set-Cookie:
+      - notion_browser_id=09abe8e1-c358-49f9-9c23-1284adc97d70; Domain=www.notion.so;
+        Path=/; Expires=Wed, 07 May 2053 18:34:16 GMT; Secure
+      Etag:
+      - W/"4b7-SteU+PB3xEdim4HbpwAbjPaSWz4"
+      Vary:
+      - Accept-Encoding
+      Cf-Cache-Status:
+      - DYNAMIC
+      Expect-Ct:
+      - max-age=604800, report-uri="https://report-uri.cloudflare.com/cdn-cgi/beacon/expect-ct"
+      Server:
+      - cloudflare
+      Cf-Ray:
+      - 686743173f1340d5-CDG
+    body:
+      encoding: UTF-8
+      string: '{"object":"list","results":[{"object":"page","id":"c7fd1abe-8114-44ea-be77-9632ea33e581","created_time":"2021-04-30T07:49:00.000Z","last_edited_time":"2021-05-25T20:17:00.000Z","cover":null,"icon":null,"parent":{"type":"database_id","database_id":"dd428e9d-d3fe-4171-870d-a7a1902c748b"},"archived":false,"properties":{"Orbit
+        Status":{"id":"=adK","type":"rich_text","rich_text":[{"type":"text","text":{"content":"OK","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"OK","href":null}]},"Orbit
+        Note URL":{"id":"L:sP","type":"url","url":"https://app.orbit.love/orbit/members/phacks3?type=notes"},"Member
+        Email":{"id":"[IFC","type":"email","email":"nicolas@orbit.love"},"Send to
+        Orbit":{"id":"^oR?","type":"checkbox","checkbox":true},"Name":{"id":"title","type":"title","title":[{"type":"text","text":{"content":"Nicolas
+        Goutay","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"Nicolas
+        Goutay","href":null}]}},"url":"https://www.notion.so/Nicolas-Goutay-c7fd1abe811444eabe779632ea33e581"}],"next_cursor":null,"has_more":false}'
+  recorded_at: Sun, 29 Aug 2021 16:47:36 GMT
 recorded_with: VCR 6.0.0
