--- a/spec/fixtures/notion/update_database.yml
+++ b/spec/fixtures/notion/update_database.yml
@@ -1,12 +1,12 @@
 ---
 http_interactions:
 - request:
-    method: post
-    uri: https://api.notion.com/v1/databases
+    method: patch
+    uri: https://api.notion.com/v1/databases/dd428e9dd3fe4171870da7a1902c748b
     body:
       encoding: UTF-8
-      string: "{\"parent\":{\"page_id\":\"c7fd1abe811444eabe779632ea33e581\"},\"title\":[{\"text\":{\"content\":\"Orbit
-        \U0001F49C Notion\"}}],\"properties\":{\"Name\":{\"title\":{}}}}"
+      string: "{\"database_id\":\"dd428e9dd3fe4171870da7a1902c748b\",\"title\":[{\"text\":{\"content\":\"Orbit
+        \U0001F49C Notion\"}}]}"
     headers:
       Accept:
       - application/json; charset=utf-8
@@ -26,7 +26,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Sun, 29 Aug 2021 16:47:37 GMT
+      - Sun, 29 Aug 2021 16:47:38 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -126,10 +126,10 @@ http_interactions:
         https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
         https://ton.twimg.com; frame-src https: http:; media-src https: http:'
       Set-Cookie:
-      - notion_browser_id=bfa607d2-c1fb-4b04-867c-27cbb230773e; Domain=www.notion.so;
-        Path=/; Expires=Wed, 07 May 2053 18:34:16 GMT; Secure
+      - notion_browser_id=7d4be4a5-0638-4e07-b2f0-a46159893335; Domain=www.notion.so;
+        Path=/; Expires=Wed, 07 May 2053 18:34:18 GMT; Secure
       Etag:
-      - W/"239-EkL3S7fHrOCAECCnlZLf9UtoE+Y"
+      - W/"39a-hH2HyNEne95ynm2k2ZQGzi8Eftc"
       Vary:
       - Accept-Encoding
       Cf-Cache-Status:
@@ -139,11 +139,15 @@ http_interactions:
       Server:
       - cloudflare
       Cf-Ray:
-      - 6867431c188a32b0-CDG
+      - 68674322db54331f-CDG
     body:
       encoding: UTF-8
-      string: "{\"object\":\"database\",\"id\":\"86817a39-3ac8-4c7f-929f-0dcb1d641c67\",\"cover\":null,\"icon\":null,\"created_time\":\"2021-08-29T16:47:00.000Z\",\"last_edited_time\":\"2021-08-29T16:47:00.000Z\",\"title\":[{\"type\":\"text\",\"text\":{\"content\":\"Orbit
+      string: "{\"object\":\"database\",\"id\":\"dd428e9d-d3fe-4171-870d-a7a1902c748b\",\"cover\":null,\"icon\":null,\"created_time\":\"2021-04-30T07:49:00.000Z\",\"last_edited_time\":\"2021-08-29T16:47:00.000Z\",\"title\":[{\"type\":\"text\",\"text\":{\"content\":\"Orbit
         \U0001F49C Notion\",\"link\":null},\"annotations\":{\"bold\":false,\"italic\":false,\"strikethrough\":false,\"underline\":false,\"code\":false,\"color\":\"default\"},\"plain_text\":\"Orbit
-        \U0001F49C Notion\",\"href\":null}],\"properties\":{\"Name\":{\"id\":\"title\",\"name\":\"Name\",\"type\":\"title\",\"title\":{}}},\"parent\":{\"type\":\"page_id\",\"page_id\":\"c7fd1abe-8114-44ea-be77-9632ea33e581\"}}"
-  recorded_at: Sun, 29 Aug 2021 16:47:37 GMT
+        \U0001F49C Notion\",\"href\":null}],\"properties\":{\"Orbit Status\":{\"id\":\"=adK\",\"name\":\"Orbit
+        Status\",\"type\":\"rich_text\",\"rich_text\":{}},\"Orbit Note URL\":{\"id\":\"L:sP\",\"name\":\"Orbit
+        Note URL\",\"type\":\"url\",\"url\":{}},\"Member Email\":{\"id\":\"[IFC\",\"name\":\"Member
+        Email\",\"type\":\"email\",\"email\":{}},\"Send to Orbit\":{\"id\":\"^oR?\",\"name\":\"Send
+        to Orbit\",\"type\":\"checkbox\",\"checkbox\":{}},\"Date\":{\"id\":\"g`km\",\"name\":\"Date\",\"type\":\"date\",\"date\":{}},\"Name\":{\"id\":\"title\",\"name\":\"Name\",\"type\":\"title\",\"title\":{}}},\"parent\":{\"type\":\"workspace\",\"workspace\":true}}"
+  recorded_at: Sun, 29 Aug 2021 16:47:38 GMT
 recorded_with: VCR 6.0.0
